--- a/style-login.css
+++ b/style-login.css
@@ -1,5 +1,4 @@
 body, html {
-    font-family: 'Sora', sans-serif;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -9,6 +8,10 @@ body, html {
     height: 100vh;
     margin: 0;
     padding: 0;
+}
+
+* {
+    font-family: 'Sora', sans-serif;
 }
 
 p {
@@ -79,14 +82,13 @@ a {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 15px;
-    border: 2px solid gray;
+    border: 2px solid white;
     background: transparent;
     border-radius: 5px;
     outline: none;
     color: white;
     font-size: 1em;
     box-sizing: border-box;
-    
 }
 
 .input-field span{
@@ -95,7 +97,7 @@ a {
     padding: 12px;
     pointer-events: none;
     font-size: 1em;
-    color: gray;
+    color: white;
     transition: 0.5s;
 }
 
@@ -103,7 +105,7 @@ a {
 .input-field input:focus ~ span,
 .input-field textarea:valid ~ span,
 .input-field textarea:focus ~ span{
-    color: darkred;
+    color: black;
     transform: translateX(15px) translateY(-4.5px);
     font-size: 0.65em;
     padding: 0 10px;
@@ -117,12 +119,19 @@ a {
 .input-field input:focus,
 .input-field textarea:valid,
 .input-field textarea:focus{
-    border: 2px solid white;
+    border: 2px solid #5c5b5b;
+}
+
+.checkbox {
+    cursor: pointer;
+    box-sizing: border-box;
+    width: 425px;
+    display: flex;
 }
 
 .botao {
     cursor: pointer;
-    background-color: #404040;
+    background-color: #5c5b5b;
     color: white;
     width: 84.5%;
     height: 55px;
