--- a/style-login.css
+++ b/style-login.css
@@ -2,7 +2,6 @@ body, html {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin: 50px;
     box-sizing: border-box;
     width: 100vw;
     height: 100vh;
@@ -61,8 +60,9 @@ a {
 }
 
 .img {
-    width: 400px;
-    border-radius: 30px;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
 }
 
 .login {
@@ -70,6 +70,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 40px;
 }
 
 .input-field{
