--- a/Calculadora/style.css
+++ b/Calculadora/style.css
@@ -1,74 +1,60 @@
 body, html {
     font-family: 'Sora', sans-serif;
+    background: linear-gradient(to right, #450610, #350000, #1f0000, #000);
+    height: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin: 50px;
-    box-sizing: border-box;
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
     padding: 0;
+    margin: 0;
 }
 
 p {
     color: white;
-    font-size: 15px;
 }
 
-h1 {
-    color: whitesmoke;
-}
-
-a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#bg {
-    background: linear-gradient(to right, #450610, #350000, #1f0000, #000);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-
-#bg canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+b {
+    color: white;
+    font-size: 25px;
 }
 
 .pai {
+    height: 480px;
+    width: 590px;
+    flex-direction: column;
+    display: flex;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border: 3px solid white;
+    border-radius: 15px;
+}
+
+.mensagem {
+    height: 700px;
+    width: 800px;
+    flex-direction: column;
+    display: flex;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border: 3px solid white;
+    border-radius: 15px;
+}
+
+.cardMen {
+    height: 280px;
     width: 500px;
-    height: 750px;
-    background-color: transparent ;
-    border: solid 5px ghostwhite;
-    box-shadow: 0px 0px 15px 0px darkgray;
-    border-radius: 25px;
-    flex-direction: column;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.img {
-    width: 300px;
-    height: 300px;
-    border-radius: 70px 70px 8px 70px;
-}
-
-.login {
-    flex-direction: column;
+    box-shadow: 0px 0px 15px 0px red;
+    border-radius: 10px;
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 40px;
+    text-align: center;
 }
 
 .input-field{
@@ -119,20 +105,4 @@ a {
 .input-field textarea:valid,
 .input-field textarea:focus{
     border: 2px solid #5c5b5b;
-}
-
-.botao {
-    cursor: pointer;
-    background-color: #5c5b5b;
-    color: white;
-    width: 84.5%;
-    height: 55px;
-    border-radius: 15px;
-    transition: background 0.9s;
-}
-
-.botao:hover {
-    background-color: #d4d4d4;
-    color: black;
-    transition: background 0.9s;
 }
