--- a/styledash.css
+++ b/styledash.css
@@ -21,30 +21,81 @@ a {
 h1 {
     color: #333;
     align-items: center;
+    padding: 0 0 20px;
+    flex-wrap: wrap;
     /* background: red; */
 }
-
-
-.header {
+ /* .sh {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(158, 27, 27);
-    color: #3a0008;
+    background-color: rgb(71, 8, 8);
+    color: #f3d7db;
     padding: 3px 0;
+    box-shadow: #333 10px;
 
     width: 60px;
     height: 100%;
 
+}  */
+
+.pai{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+
+.grupo{
+    margin: 0 0 3px;
+}
+
+
+.header {
+    width: 100%;
+    height: 150vw;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    box-shadow: 30px 10px 110px rgba(105, 0, 0, 0.322);
+    padding: 0 20px;
+    justify-content: space-around;
+    margin: 0 0 2px;
+    
+}
+
+
 
 .navbar {
     list-style: none;
+    display: flex;
+    justify-content: space-between;
     margin-left: auto;
 }
 
 .navbar li {
-    margin-right: 10px;
+    margin-right: 40px;
+}
+
+.navbar li:last-child {
+    margin-right: 0;
+}
+
+.navbar a {
+    text-decoration: none;
+    color: #5f0000;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+.navbar a:hover {
+    color: #b66925; /* Cor ao passar o mouse */
+}
+
+.logo {
+    width: 80px; /* Ajuste conforme necessário */
+    height: auto; /* Manter a proporção */
+    margin-right: 20px;
 }
 
 
@@ -54,19 +105,7 @@ h1 {
     /* border-radius: 50%; */
 }
 
-.logo {
-    /* width: -50%; Defina a largura desejada */
-    /* height: 10%; Defina a altura desejada */
-    margin-left: 10px;
-    margin-top: 10px; 
-    margin-bottom: 10px; 
-    margin-right: 10px; 
-    /* border: 10px solid black; */
-    display: flex;
-   
 
-    /* background-color: red;  */
-}
 
 .container {
     width: 100%;
@@ -79,6 +118,7 @@ h1 {
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
+    box-shadow: 15 -15px 0 red
 }
 
 .father{
@@ -125,10 +165,11 @@ h1 {
 }
 
 .card-item-1{
-    width: 690px;
+    width: 45vw;
     height: 400px;
     background: #3a0008;
     align-items: center;
+    display: flex;
 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
@@ -143,7 +184,7 @@ h1 {
 }
 
 .card-item-2{
-    width: 530px;
+    width: 38vw;
     height: 250px;
     align-items: center;
     justify-content: center;
@@ -151,6 +192,7 @@ h1 {
     flex-direction: column;
     justify-content: space-between;
     background: #3a0008;
+    margin: 0 0 20px;
 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
@@ -163,7 +205,7 @@ h1 {
 }
 
 .card-item-3{
-    width: 530px;
+    width: 38vw;
     height: 250px;
     align-items: center;
     justify-content: center;
@@ -182,7 +224,7 @@ h1 {
     border-radius: 5px;
 }
 .tela{
-    width: 690px;
+    width: 45vw;
     height: 100%;
     background: rgb(255, 255, 255);
     align-items: center;
@@ -190,12 +232,31 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex-wrap: wrap;
 
     border: 10px solid #3a0008;
     border-radius: 16px;
+    
 }
 .tela2{
-    width: 500px;
+    width: 36vw;
+    height: 100%;
+    background: rgb(255, 255, 255);
+    align-items: stretch;
+    
+
+
+    flex-direction: column;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+
+    border: 6px solid #3a0008;
+    border-radius: 10px;
+}
+
+.tela3{
+    width: 36vw;
     height: 100%;
     background: rgb(255, 255, 255);
     align-items: stretch;
@@ -204,21 +265,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     display: block;
-
-    border: 6px solid #3a0008;
-    border-radius: 10px;
-}
-
-.tela3{
-    width: 500px;
-    height: 300px;
-    background: rgb(255, 255, 255);
-    align-items: stretch;
-
-
-    flex-direction: column;
-    justify-content: center;
-    display: block;
+    flex-wrap: wrap;
 
     border: 6px solid #3a0008;
     border-radius: 10px;
@@ -226,6 +273,7 @@ h1 {
 
 .grafico1{
     width: 100%;
+    flex-wrap: wrap;
 }
 
 .grafico2{
@@ -251,7 +299,7 @@ h1 {
 
 .campo{
     /* border: blue 3px solid; */
-    width: 600px;
+    width: 300vw;
     /* justify-content: center; */
     display: flex;
     flex-direction: column;
@@ -260,12 +308,13 @@ h1 {
 }
 
 .informacao-card{
-    width: 500px;
+    width: 50vw;
     margin-bottom: 15px;
     display: flex;
     border: #3a0008 3px solid;
     border-radius: 20px;
     background-color: #3a0008 ;
+    flex-wrap: wrap;
 
 
     display: flex;
