--- a/dashboardATT/styledash.css
+++ b/dashboardATT/styledash.css
@@ -6,10 +6,9 @@
 }
 
 body {
-    background-color: #ffffff;
+    background-color: #4d0000ab;
     width: 100vw;
     height: 100vh;
-
     display: flex;
 }
 
@@ -21,7 +20,9 @@ a {
 h1 {
     color: #333;
     align-items: center;
-    padding: 0 0 20px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-bottom: 20px;
+    /* padding-top: 15px;; */
     flex-wrap: wrap;
     /* background: red; */
 }
@@ -53,14 +54,15 @@ h1 {
 
 .header {
     width: 100%;
-    height: 150vw;
+    height: 30%;
     background-color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
     box-shadow: 30px 10px 110px rgba(105, 0, 0, 0.322);
     padding: 0 20px;
     justify-content: space-around;
-    margin: 0 0 2px;
+    margin: 0 0 2px ;
+
     
 }
 
@@ -167,20 +169,21 @@ h1 {
 .card-item-1{
     width: 45vw;
     height: 400px;
-    background: #3a0008;
+    background: #3a0008e8;
     align-items: center;
     display: flex;
 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
+    font-size: 17px;
     color:white ;
+    box-shadow: 8px 8px 8px rgba(105, 0, 0, 0.322);
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
     /* border: 6px solid red; */
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .card-item-2{
@@ -191,37 +194,39 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background: #3a0008;
+    background: #3a0008e8;
     margin: 0 0 20px;
+    box-shadow: 8px 8px 8px rgba(105, 0, 0, 0.322);
 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
+    font-size: 17px;
     color:white ;
 
     
 
     border: 6px solid #3a0008;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .card-item-3{
     width: 38vw;
-    height: 250px;
+    height: fit-content;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background: #3a0008;
+    background: #3a0008e8;
+    box-shadow: 8px 8px 8px rgba(105, 0, 0, 0.322);
 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
+    font-size: 17px;
     color:white ;
 
     
 
     border: 3px solid #3a0008;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 .tela{
     width: 45vw;
@@ -255,21 +260,32 @@ h1 {
     border-radius: 10px;
 }
 
-.tela3{
+.tela3 {
     width: 36vw;
     height: 100%;
     background: rgb(255, 255, 255);
-    align-items: stretch;
-
-
+    align-items: center;
     flex-direction: column;
     justify-content: center;
-    display: block;
-    flex-wrap: wrap;
-
+    display: flex;
     border: 6px solid #3a0008;
     border-radius: 10px;
 }
+
+.alerta {
+    width: 100%;
+    height: 50px;
+    /* padding: 20px; */
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    color: #5f0000;
+    border-bottom: 3px solid #3a0008; /* Adiciona uma borda na parte inferior */
+}
+
+
 
 .grafico1{
     width: 100%;
@@ -287,15 +303,24 @@ h1 {
     height: 190px;
 }
 
-.grafico3{
+
+.grafico3 {
+    width: 100%;
+    height: 80%; /* Ajusta a altura do gráfico para ocupar o restante do espaço */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* .grafico3{
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
+    width: 50%;
     height: 190px;
-}
+} */
 
 .campo{
     /* border: blue 3px solid; */
@@ -311,9 +336,9 @@ h1 {
     width: 50vw;
     margin-bottom: 15px;
     display: flex;
-    border: #3a0008 3px solid;
+    border: #3a000800 3px solid;
     border-radius: 20px;
-    background-color: #3a0008 ;
+    background-color: #42000900 ;
     flex-wrap: wrap;
 
 
@@ -327,26 +352,37 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    border: #350000 3px solid;
+    box-shadow: 0px 0px 7px rgba(63, 0, 0, 0.788);
     /* background-color: rgb(255, 255, 255); */
     align-items: center;
-
+    color: #3a0008;
     /* border: 2px solid red; */
     border-radius: 10px;
 }
 
 .temp{
-    font-size: 30px;
+    font-size:25px;
     color: #ffffff;
     /* align-items: stretch; */
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     /* border: 2px solid rgb(209, 67, 67); */
     /* padding: 32px; */
 }
 
 .desc1{
 font-size: 12px;
-color: #ffffff;
+color: #350000;
 /* border: 2px solid #3a0008; */
+}
+.organizacao {
+    padding-left: 15px;
+    padding-right: 15px;
+    border: #350000 2px solid;
+    
+}
+b {
+    color: #3a0008;
 }
 
 .branco{
