--- a/Calculadora/style.css
+++ b/Calculadora/style.css
@@ -1,108 +1,122 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body, html {
     font-family: 'Sora', sans-serif;
-    background: linear-gradient(to right, #450610, #350000, #1f0000, #000);
+    background: #f0f0f0;
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding: 0;
-    margin: 0;
 }
 
 p {
-    color: white;
+    color: black;
+    font-size: 20px;
 }
 
 b {
-    color: white;
-    font-size: 25px;
+    color: black;
+    font-size: 35px;
 }
 
 .pai {
-    height: 480px;
-    width: 590px;
+    width: 31%;
+    background-color: white;
     flex-direction: column;
     display: flex;
-    box-sizing: border-box;
+    box-shadow: 0px 10px 20px rgba(107, 0, 0, 0.644);
     align-items: center;
     justify-content: center;
     text-align: center;
-    border: 3px solid white;
+    padding: 57px 50px 57px 50px;
     border-radius: 15px;
 }
 
 .mensagem {
-    height: 700px;
-    width: 800px;
+    width: 38%;
+    background-color: white;
     flex-direction: column;
+    font-size: 20px;
     display: flex;
-    box-sizing: border-box;
+    box-shadow: 0px 10px 20px rgba(107, 0, 0, 0.644);
     align-items: center;
     justify-content: center;
     text-align: center;
-    border: 3px solid white;
+    padding: 70px 55px 70px 55px;
     border-radius: 15px;
 }
 
-.cardMen {
-    height: 280px;
-    width: 500px;
-    box-shadow: 0px 0px 15px 0px red;
+.select {
+    cursor: pointer;
+    height: 30px;
+    width: 35%;
     border-radius: 10px;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    font-size: 15px;
+    margin: 12px 0px 12px 0px;
 }
 
-.input-field{
+.input-field {
+    margin-bottom: 25px;
     position: relative;
-    width: 85%;
+    width: 100%;
+    font-size: 18px;
 }
 
-.input-field input, textarea{
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 15px;
-    border: 2px solid white;
+.input-field input {
+    width: calc(100% - 30px);
+    padding: 10px;
+    margin-top: 10px;
+    border: 2px solid #ddd;
     background: transparent;
     border-radius: 5px;
     outline: none;
-    color: white;
+    color: #333;
     font-size: 1em;
-    box-sizing: border-box;
 }
 
-.input-field span{
+.input-field input:focus {
+    border-color: #aaa;
+}
+
+.input-field span {
     position: absolute;
     left: 0;
-    padding: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 0 10px;
     pointer-events: none;
     font-size: 1em;
-    color: white;
-    transition: 0.5s;
+    color: #aaa;
+    transition: 0.3s;
 }
 
-.input-field input:valid ~ span,
-.input-field input:focus ~ span,
-.input-field textarea:valid ~ span,
-.input-field textarea:focus ~ span{
-    color: black;
-    transform: translateX(15px) translateY(-4.5px);
-    font-size: 0.65em;
-    padding: 0 10px;
+.input-field input:focus~span,
+.input-field input:not(:placeholder-shown)~span {
+    color: #555;
+    transform: translateX(10px) translateY(-130%);
     background: white;
-    letter-spacing: 0.2em;
-    border-radius: 2px;
+    border-radius: 5px;
     font-weight: bold;
 }
 
-.input-field input:valid,
-.input-field input:focus,
-.input-field textarea:valid,
-.input-field textarea:focus{
-    border: 2px solid #5c5b5b;
+.botao {
+    cursor: pointer;
+    background-color: rgb(87, 0, 0);
+    color: white;
+    width: 100%;
+    height: 50px;
+    border-radius: 5px;
+    border: none;
+    font-size: 1em;
+    transition: background 0.3s;
+}
+
+.botao:hover {
+    background-color: #5d000078;
 }
