--- a/Site_institucional/css/winetemp.css
+++ b/Site_institucional/css/winetemp.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Source Sans 3', sans-serif;
     background-color: white;
@@ -18,6 +22,9 @@ h5 {
     width: 100%;
     height: 100px;
     background-color: white;
+
+    position: fixed;
+
     display: flex;
     align-items: center;
     box-shadow: 0 0 10px rgba(105, 0, 0, 0.322);
@@ -62,7 +69,7 @@ h5 {
 .banner {
     display: flex;
     align-items: flex-end;
-    padding: 150px 0px 150px 0px;
+    padding: 115px 0px 50px 0px;
     font-size: 70px;
 }
 
@@ -72,6 +79,13 @@ h5 {
     font-weight: bold;
     color: #5f0000;
     margin-bottom: 20px;
+}
+
+.bem-vindo{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
 }
 
 .container {
@@ -139,7 +153,7 @@ h5 {
 #por-que-winetemp {
     background-color: #fafafa;
     color: #5e2129;
-    padding: 190px 0px 150px 0px;
+    padding: 190px 0px 200px 0px;
     text-align: center;
     flex-direction: column;
 }
@@ -227,3 +241,13 @@ h5 {
     margin-bottom: 8px;
 }
 
+.img-equipe{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.espaco{
+    margin-bottom: 100px;
+}
