Correção do resultado da Calculadora e setas para voltar a pagina anterior

--- a/Site_institucional/css/style-login.css
+++ b/Site_institucional/css/style-login.css
@@ -152,3 +152,15 @@ h1 {
 .img {
     width: 80%;
 }
+
+.voltar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 50px 0px 0px 50px;
+}
+
+.img2 {
+    width: 60%;
+    cursor: pointer;
+}
