--- a/Site_institucional/css/style-calculadora.css
+++ b/Site_institucional/css/style-calculadora.css
@@ -49,12 +49,10 @@ h4 {
     width: 100%;
     height: 100px;
     background-color: white;
-
     position: fixed;
-
     display: flex;
-  
     align-items: center;
+    justify-content: end;
     box-shadow: 0 0 10px rgba(105, 0, 0, 0.322);
     padding: 0 20px;
 }
@@ -136,6 +134,7 @@ h4 {
     text-align: center;
     padding: 70px 55px 70px 55px;
     border-radius: 15px;
+    color: black;
 }
 
 .select {
@@ -208,3 +207,12 @@ h4 {
     color: white;
 }
 
+.voltar {
+    position: absolute;
+    margin: 140px 0px 0px 50px;
+}
+
+.img2 {
+    width: 60%;
+    cursor: pointer;
+}
