--- a/Site_institucional/css/winetemp.css
+++ b/Site_institucional/css/winetemp.css
@@ -22,11 +22,9 @@ h5 {
     width: 100%;
     height: 100px;
     background-color: white;
-
     position: fixed;
-
     display: flex;
-  
+    z-index: 1;
     align-items: center;
     box-shadow: 0 0 10px rgba(105, 0, 0, 0.322);
     padding: 0 20px;
