--- a/webdatavizeprojgrupo/web-data-viz/public/css/styledash.css
+++ b/webdatavizeprojgrupo/web-data-viz/public/css/styledash.css
@@ -6,11 +6,7 @@
 }
 
 body {
-<<<<<<< HEAD
-    background-color: #f7bbbb60;
-=======
     background-color: #3a0008;
->>>>>>> a29fb4e4749591f68e818f586a1ff9b1ae4f4f68
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
@@ -97,7 +93,7 @@ h1 {
 .navbar a {
     text-decoration: none;
     color: #5f0000;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
     transition: color 0.3s ease;
 }
@@ -125,8 +121,6 @@ h1 {
     /* border-radius: 50%; */
 }
 
-
-
 .container {
     width: 100%;
     height: 100%;
@@ -151,31 +145,6 @@ h1 {
     align-items: center;
 }
 
-<<<<<<< HEAD
-.father1 {
-    margin-top: 20px;
-
-}
-
-.son div {
-    background-color: white;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    /* width: 30vw; */
-    height: auto;
-
-    /* box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff; ;  */
-    border-radius: 15px;
-
-}
-
-.son h3 {
-    padding: 10px 0;
-}
-
-.son img {
-=======
 .father1{
     margin-top: 20px;   
 }
@@ -200,7 +169,6 @@ h1 {
 }
 
 .son img{
->>>>>>> a29fb4e4749591f68e818f586a1ff9b1ae4f4f68
     width: 40%;
     margin: auto;
     /* display: flex;
@@ -213,42 +181,23 @@ h1 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 100px;
-<<<<<<< HEAD
-
-}
-
-.son p {
-=======
 }
 
 .son p{
->>>>>>> a29fb4e4749591f68e818f586a1ff9b1ae4f4f68
     padding: 10px 0;
 }
 
 .son a {
     width: auto;
     align-self: center;
-<<<<<<< HEAD
     display: flex;
 
 }
 
-=======
-    display: flex
-}
-
-.show {
-    border: none;
-}
-
->>>>>>> a29fb4e4749591f68e818f586a1ff9b1ae4f4f68
 .child {
     width: 100%;
     height: 90%;
-
     background: rgb(255, 255, 255);
-
     display: flex;
     justify-content: space-around;
 }
@@ -256,7 +205,6 @@ h1 {
 .child-left {
     width: 50%;
     height: 100%;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -508,18 +456,26 @@ b {
 }
 
 .low-temp {
+    font: bolder;
+    font-size: 20px;
     color: blue;
 }
 
 .high-temp {
+    font: bolder;
+    font-size: 20px;
     color: red;
 }
 
 .low-humidity {
+    font: bolder;
+    font-size: 20px;
     color: orange;
 }
 
 .high-humidity {
+    font: bolder;
+    font-size: 20px;
     color: purple;
 }
 
