--- a/webdatavizeprojgrupo/web-data-viz/public/css/styledassreal.css
+++ b/webdatavizeprojgrupo/web-data-viz/public/css/styledassreal.css
@@ -115,9 +115,8 @@ h1 {
 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 17px;
-    color:white ;
+    color:rgb(255, 255, 255) ;
     box-shadow: 8px 8px 8px rgba(105, 0, 0, 0.322);
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
